test/acceptance/parsing/failing/include-non-spun-file.spun
include "./include-same-file.js"
